5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1871_1720.log
== TEST (2019-07-02 16:14:59) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Notas:")))

aprovado=0

for i in range(shape(matriz)[0]):
	soma=sum(matriz[i,:])
	media=soma/shape(matriz)[1]
		if(media>=5):
			aprovado=aprovado+1

total=aprovados/shape(matriz)[0]*100			
-- ERROR:
File "XXXX", line 11
    if(media>=5):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:15:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Notas:")))

aprovado=0

for i in range(shape(matriz)[0]):
	soma=sum(matriz[i,:])
	media=soma/shape(matriz)[1]
		if(media>=5):
			aprovado=aprovado+1

total=aprovados/shape(matriz)[0]*100			
-- ERROR:
File "XXXX", line 11
    if(media>=5):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:15:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Notas:")))

aprovado=0

for i in range(shape(matriz)[0]):
	soma=sum(matriz[i,:])
	media=soma/shape(matriz)[1]
		if(media>5):
			aprovado=aprovado+1

total=aprovados/shape(matriz)[0]*100			
-- ERROR:
File "XXXX", line 11
    if(media>5):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:16:31) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Notas:")))

aprovado=0

for i in range(shape(matriz)[0]):
	soma=sum(matriz[i,:])
	media=soma/shape(matriz)[1]
		
		if(media>=5)
			aprovado=aprovado+1

total=aprovados/shape(matriz)[0]*100			
-- ERROR:
File "XXXX", line 12
    if(media>=5)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:16:48) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Notas:")))

aprovado=0

for i in range(shape(matriz)[0]):
	soma=sum(matriz[i,:])
	media=soma/shape(matriz)[1]
		b=0
		if(media>=5)
			aprovado=aprovado+1

total=aprovados/shape(matriz)[0]*100			
-- ERROR:
File "XXXX", line 11
    b=0
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:17:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Notas:")))
notas=shape(matriz)[1]
aprovado=0

for i in range(shape(matriz)[0]):
	soma=sum(matriz[i,:])
	media=soma/notas
		
		if(media>=5)
			aprovado=aprovado+1

total=aprovados/shape(matriz)[0]*100			
-- ERROR:
File "XXXX", line 12
    if(media>=5)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:17:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Notas:")))
notas=shape(matriz)[1]
aprovado=0

for i in range(shape(matriz)[0]):
	soma=sum(matriz[i,:])
	media=soma/notas
		
		if(media>=5):
			aprovado=aprovado+1

total=aprovados/shape(matriz)[0]*100			
-- ERROR:
File "XXXX", line 12
    if(media>=5):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:18:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Notas:")))
notas=shape(matriz)[1]
aprovado=0

for i in range(shape(matriz)[0]):
	soma=sum(matriz[i,:])
	media=soma/notas
		
	if(media>=5):
		aprovado=aprovado+1

total=aprovados/shape(matriz)[0]*100			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:18:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Notas:")))
notas=shape(matriz)[1]
aprovado=0

for i in range(shape(matriz)[0]):
	soma=sum(matriz[i,:])
	media=soma/notas
		
	if(media>=5):
		aprovado=aprovado+1

total=aprovado/shape(matriz)[0]*100			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:18:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Notas:")))
notas=shape(matriz)[1]
aprovado=0

for i in range(shape(matriz)[0]):
	soma=sum(matriz[i,:])
	media=soma/notas
		
	if(media>=5):
		aprovado=aprovado+1

total=aprovado/shape(matriz)[0]*100			
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:18:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Notas:")))
notas=shape(matriz)[1]
aprovado=0

for i in range(shape(matriz)[0]):
	soma=sum(matriz[i,:])
	media=soma/notas
		
	if(media>=5):
		aprovado=aprovado+1

total=aprovado/shape(matriz)[0]*100			
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:19:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz=array(eval(input("Notas:")))
notas=shape(matriz)[1]
aprovado=0

for i in range(shape(matriz)[0]):
	soma=sum(matriz[i,:])
	media=soma/notas
		
	if(media>=5):
		aprovado=aprovado+1

total=aprovado/shape(matriz)[0]*100			
print(round(total,2))
-- EXECUTION TIME:
1.17977
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
---- correct output:
66.67
---- user output:
66.67
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
---- correct output:
33.33
---- user output:
33.33
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
---- correct output:
50.0
---- user output:
50.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
